proprietary_codecs = true
ffmpeg_branding = "Chrome"
ozone_auto_platforms = false
use_ozone = true
use_xkbcommon = true
ozone_platform_wayland = true
ozone_platform_x11 = true
use_bundled_weston = true
angle_enable_vulkan = false
use_remoteexec = true
reclient_cfg_dir = "../../buildtools/reclient_cfgs/linux"
is_component_build = true
use_glib = true
use_siso = true
is_debug = false
blink_symbol_level = 0
symbol_level = 1
dcheck_always_on = true
dcheck_is_configurable = false
